﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-11-13 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * db_details_structure.php: wrong js function call

2005-11-11 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/bulgarian: Update, thanks to Stanislav Yordanov - stanprog.
    * lang/finnish: update, thanks to Jouni Kahkonen

2005-11-10 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/session.inc.php, Documentation.html: bug #1352479, warn
      if PHP does not support session
    * server_privileges.php: bug #1353435, selecting users to drop is broken
      and bug #1353437, undefined index while editing a user

2005-11-10 Michal Čihař  <michal@cihar.com>
    * scripts/create-release.sh: = is correct for comparsion in shell.
    * server_privileges.php: Revert fix for #1353437, there are wrong data and
      not displaying of it, fix bad display of table privileges.

2005-11-09 Marc Delisle  <lem9@users.sourceforge.net>
    * pdf_pages.php: bug #1245891, too large scaling in PDF schema
    * libraries/bookmark.lib.php: bug #1339184 (for bookmark insertion)
    * tbl_properties.inc.php: superscript 1 for Length/Values

2005-11-09 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * server_databases.php, mysql_charsets-lib.php:
      bug #1351743 undefined function: pma_getservercollation()
    * database_interface.lib.php: added PMA_DBI_get_default_engine()
    * db_details_structure.php:
      - fixed display issues
      - display default engine in footer
    * libraries/common.lib.php: added PMA_getDbLink
    * libraries/display_create_table.lib.php: use fieldset
    * server_privilegs.php, libraries/server_privilegs.js:
       - db with only table specific rights where not displayed if there was not
         at least one db with db specfic rights
       - javascript errors
    * function.js, db_details_structure.php, tbl_properties_structure.php,
      display_tbl.lib.php, server_databases.php: